[package]
name = "clippngmeta"
version = "0.1.0"
edition = "2021"
description = "Copy png image metadata to clipboard"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = { version = "4.3.21", features = ["derive"] }
png = "0.17.9"
serde_yaml = "0.9.25"
